src/cz/muni/fi/spc/SchedVis/parsers/machines/grammar.jj
/**
 * JavaCC file
 */
 
options {
  JDK_VERSION = "1.5";
}
PARSER_BEGIN(MachinesParser)
package cz.muni.fi.spc.SchedVis.parsers.machines;

import cz.muni.fi.spc.SchedVis.parsers.Parser;

public class MachinesParser extends Parser {
  public static void main(String args[]) throws ParseException {
      try {
        MachinesParser parser = new MachinesParser(System.in);
        MachinesList machines = parser.read();
        System.out.println("Successfully read " + machines.size() + " machines!");
      } catch (Exception e) {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
      } catch (Error e) {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
      }
  }
  
}
PARSER_END(MachinesParser)

TOKEN :
{
    < CONSTANT: "-1" | ( <DIGIT> )+ >  /* A numeric constant. */
|   < #DIGIT: ["0" - "9"] >     /* A single number. */
|   < STRING: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","_"," ","0"-"9"] )* > /* An allowed string. */
}

MachinesList read() :
{
	MachinesList machines = new MachinesList();
}
{
    (machines=machine_data(machines))+
    ("\n")*
    <EOF>
    {return machines;}	
}

MachinesList machine_data(MachinesList machines) : 
{
	Token name;
	Token numCPUs;
	Token speed;
	Token arch;
	Token os;
	Token mem;
	Token space;
}
{
	name=<STRING> ";" 
	numCPUs=<CONSTANT> ";" 
	speed=<CONSTANT> ";" 
	arch=<STRING> ";" 
	os=<STRING> ";" 
	mem=<CONSTANT> ";" 
	space=<CONSTANT> "\n"  
	{
		machines.add(new MachineData(name, numCPUs, speed, arch, os, mem, space));
        if (this.getImporter() != null) this.getImporter().nextLineParsed();
		return machines;
	} 
}
